OpenJMLTest/test/escAbstractSpecs2/expected
test/escAbstractSpecs2/Test.java:9: error: There is no default constructor to match this specification    					 	
		//@ public C();
		           ^
test/escAbstractSpecs2/Test.java:12: error: constructor C in class C cannot be applied to given types;
			this();
			^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
Operation not performed because of parse or type errors
2 errors
